<resources>

    <string name="app_name">DLearn</string>
    <string name="app_subtitle">Learning Platform</string>

    <string name="title_email">E-mail</string>
    <string name="title_password">Senha</string>
    <string name="title_name">Nome</string>
    <string name="title_change_name">Trocar nome</string>
    <string name="title_change_password">Trocar senha</string>


    <string name="otp_error_default">Código inválido. Tente novamente.</string>
    <string name="otp_resend_prompt">Não recebeu o código? </string>
    <string name="otp_resend_now">Reenvie agora</string>
    <string name="otp_resend_in">Reenvie em %1$s</string>

    <string name="email_message_validation">Informe um e-mail válido.</string>
    <string name="password_message_validation">Use uma senha válida.</string>

    <string name="login_screen_title">Bem vindo de volta!</string>

    <string name="action_back">Voltar</string>
    <string name="action_favorite">Favoritar</string>
    <string name="action_menu">Menu</string>
    <string name="action_search">Pesquisar</string>
    <string name="action_profile">Perfil</string>
    <string name="search_placeholder">Pesquisar...</string>

    <string name="action_watch">Assistir</string>
    <string name="action_add_to_list">Minha lista</string>

    <string name="chip_action_clear_selection">Limpar seleção</string>
    <string name="chip_label_series">Séries</string>
    <string name="chip_label_movies">Filmes</string>
    <string name="chip_label_categories">Categorias</string>
    <string name="chip_description_dropdown">Abrir opções</string>

    <string name="selection_option_lowest_number">Menor número</string>
    <string name="selection_option_highest_number">Maior número</string>
    <string name="selection_option_a_z">A-Z</string>
    <string name="selection_option_z_a">Z-A</string>

    <string name="profile_image_picker_title">Alterar foto de perfil</string>
    <string name="profile_image_picker_camera">Tirar foto</string>
    <string name="profile_image_picker_gallery">Escolher da galeria</string>
    <string name="profile_image_picker_cancel">Cancelar</string>

    <string name="label_premium">Premium</string>
    <string name="label_free">Free</string>

    <string name="action_retry">Tentar novamente</string>
    <string name="action_close">Fechar</string>

    <string name="action_more">Ver mais</string>
    <string name="action_less">Ver menos</string>

    <string name="movie_action_play_trailer">Trailer</string>
    <string name="movie_action_pause">Pausar</string>
    <string name="movie_action_download">Download</string>
    <string name="movie_action_share">Compartilhar</string>
    <string name="movie_where_to_watch">Onde assistir</string>
    <string name="movie_watch_provider_more">Mais %1$d</string>
    <string name="youtube_player_title">YouTube Player</string>

    <string name="error_timeout_title">Tempo Esgotado</string>
    <string name="error_timeout_description">A requisição demorou mais do que o esperado. Por favor, verifique sua conexão e tente novamente.</string>

    <string name="error_generic_title">Erro Inesperado</string>
    <string name="error_generic_description">Ocorreu um erro inesperado. Por favor, tente novamente.</string>

    <string name="error_auth_title">Erro de Autenticação</string>
    <string name="error_auth_description">Você não tem permissão para acessar este recurso ou sua sessão expirou.</string>

    <string name="error_no_internet_title">Sem Conexão com a Internet</string>
    <string name="error_no_internet_description">Verifique sua conexão com a internet e tente novamente.</string>

    <string name="error_not_found_title">Recurso não Encontrado</string>
    <string name="error_not_found_description">O conteúdo que você está procurando não existe ou foi removido.</string>

    <string name="error_server_title">Erro no Servidor</string>
    <string name="error_server_description">Ocorreu um erro em nossos servidores. Nossa equipe já foi notificada. Tente novamente mais tarde.</string>

    <string name="error_service_unavailable_title">Serviço Indisponível</string>
    <string name="error_service_unavailable_description">O serviço está temporariamente indisponível para manutenção. Por favor, tente novamente em instantes.</string>

    <string name="error_challenge_title">Verificação Necessária</string>
    <string name="error_challenge_description">Para sua segurança, precisamos validar sua identidade via OTP, SMS, E-mail ou Biometria.</string>
</resources>
