...
import com.diegoferreiracaetano.dlearn.designsystem.generated.resources.movie_action_play_trailer
import com.diegoferreiracaetano.dlearn.designsystem.theme.DLearnTheme
import org.jetbrains.compose.resources.stringResource
import org.jetbrains.compose.ui.tooling.preview.Preview

object AppMovieActionsTags {
    const val PLAY_BUTTON = "AppMovieActions_PlayButton"
    const val ADD_BUTTON = "AppMovieActions_AddButton"
    const val FAVORITE_BUTTON = "AppMovieActions_FavoriteButton"
    const val WATCH_PROVIDERS = "AppMovieActions_WatchProviders"
}

/**
...
    val providers = listOf(
        WatchProvider(
            "Mercado Play",
            Res.drawable.ic_netflix.toAppImageSource(),
            "Sem custo financeiro"
        ),
        WatchProvider("Netflix", Res.drawable.ic_netflix.toAppImageSource(), "Assinatura"),
        WatchProvider(
            "Amazon Prime Video",
            Res.drawable.ic_netflix.toAppImageSource(),
            "Assinatura",
        ),
        WatchProvider("Paramount+", Res.drawable.ic_netflix.toAppImageSource(), "Assinatura"),
...
